src/objects/Flagged_Record_Set__c.object
<CustomObject>
    <fields>
        <fullName>DuplicateRecordSetID__c</fullName>
        <description>SFDC ID for duplicateRecordSetID.  sfdc prevents this field from being a lookup</description>
        <externalId>true</externalId>
        <label>DuplicateRecordSetID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipName>Conflict</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rule_Name__c</fullName>
        <description>This is auto-populated from the trigger Rule_Name__c</description>
        <label>Rule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Appealed__c</fullName>
        <label>Total Number of Appealed</label>
        <summaryFilterItems>
            <field>Flagged_Application__c.Review_Status__c</field>
            <operation>equals</operation>
            <value>Appealed</value>
        </summaryFilterItems>
        <summaryForeignKey>Flagged_Application__c.Flagged_Record_Set__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Duplicates__c</fullName>
        <label>Total Number of Duplicates</label>
        <summaryFilterItems>
            <field>Flagged_Application__c.Review_Status__c</field>
            <operation>equals</operation>
            <value>Reviewed - Duplicate</value>
        </summaryFilterItems>
        <summaryForeignKey>Flagged_Application__c.Flagged_Record_Set__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Pending_Review__c</fullName>
        <label>Total Number of Pending Review</label>
        <summaryFilterItems>
            <field>Flagged_Application__c.Review_Status__c</field>
            <operation>equals</operation>
            <value>Pending Review</value>
        </summaryFilterItems>
        <summaryForeignKey>Flagged_Application__c.Flagged_Record_Set__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Flagged Record Set</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Listing__c</columns>
        <columns>Rule_Name__c</columns>
        <columns>Total_Number_of_Duplicates__c</columns>
        <columns>Total_Number_of_Pending_Review__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>DuplicateRecordSetID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FRS-{0000000000}</displayFormat>
        <label>Flagged Record Set</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flagged Record Set</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>